# EduAssist

EduAssist/: CMakeLists.txt  ContentList.qml  CourseItem.qml  DatabaseManager.h  DeadlinePanel.qml  Main.qml  MusicPlayer.qml  PlayerWindow.qml  bd.cpp  bd.h  coursemanager.cpp  coursemanager.h  databasemanager.cpp  databasemanager.h  main.cpp  resource.qrc
